# scDataStatProject

./: .gitignore  README.md  benchmark_real_data.ipynb  holland-benchmark.ipynb  pyproject.toml  real-data-result.ipynb  roc_plot.ipynb  sim_bench_scoring.ipynb  sim_data_generator.py  stats_plot.ipynb  test.csv  tf_to_targets_correlation.py
simulated_data/: _kale_scores.tsv  parameters.json  simulated_ground_truth.tsv  simulated_prior_data.tsv  simulated_scRNASeq_data_stats.tsv  simulation_test_suite_results.csv  simulation_test_suite_results_kales_weakness.csv  simulation_test_suite_results_kales_weakness_extreme.csv  simulation_test_suite_results_lamda5.csv  simulation_test_suite_results_log.csv  simulation_test_suite_results_updated.csv
src/: calculate_stat.py  kale.py  kale_archive.py  sim_data_generator.py  sim_data_generator_optimized.py
